[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/UI/Icons/x.svg" type="Texture" id=1]
[ext_resource path="res://Scenes/GUI/SystemButtons/SystemButton.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.435294, 0.305882, 0.2, 0.756863 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="QuitBtn" type="Control"]
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X" type="Sprite" parent="Panel"]
position = Vector2( 35, 35 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 1 )

[connection signal="gui_input" from="." to="." method="_on_QuitBtn_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_QuitBtn_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_QuitBtn_mouse_exited"]
